...
    if (orderSkincare.isNotEmpty()) {
        LazyVerticalGrid(
            columns = GridCells.Adaptive(140.dp),
            contentPadding = PaddingValues(14.dp),
            verticalArrangement = Arrangement.spacedBy(14.dp),
            horizontalArrangement = Arrangement.spacedBy(14.dp),
            modifier = modifier.testTag("SkincareList")
        ) {
            items(orderSkincare, key = { it.skincare.id }) { data ->
                SkincareItem(
                    thumbnail = data.skincare.thumbnail,
                    name = data.skincare.name,
                    price = data.skincare.price,
...
